feat(auth): enhance token management with Redis key prefix and bidirectional mapping
- Add Redis key prefix constant for better key organization
- Implement bidirectional mapping between user IDs and refresh tokens
- Update auth middleware to check token validity in Redis
- Remove direct Redis client dependency from auth service
- Add VSCode debug configuration and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.dll
 *.so
 *.dylib
+app
 
 # Test binaries
 *_test
@@ -24,10 +25,11 @@ go.work.sum
 # Log files
 *.log
 *.out
+__debug_bin*
 
 # IDE specific files
 .idea/
-.vscode/
+# .vscode/
 *.swp
 *.swo
 
