feat: Implement gRPC server and Docker configuration
- Add gRPC server implementation with HTTP gateway
- Fix dependency injection issues in wire.go
- Update config.go to properly load application settings
- Expose gRPC ports (50051, 50052) in Dockerfile
- Create docker-compose.yml with PostgreSQL and Redis services
- Add health checks for all services
- Configure proper networking between services

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,6 @@
         },
         "apiVersion": 2,
         "showGlobalVariables": true
-    }
+    },
+    "makefile.configureOnOpen": false
 }
